feat: implementa performance do anunciante
